[package]
name = "actix-juniper-cassandra"
version = "0.1.0"
authors = ["Brendan A R Sechter <sgeos@hotmail.com>"]
edition = "2018"

[lib]
name = "actix_juniper_cassandra"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-cors = "0.5"
actix-web = "3.3"
actix-web-actors = "3.0"
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.8"
futures = "0.3.5"
juniper = { version = "0.15.3", features = ["scalar-naivetime"] }
juniper_actix = "0.2.3"
juniper_graphql_ws = { version = "0.2.3", optional = true }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0"
tokio = { version = "0.2", features = ["time"] }

[dev-dependencies]
actix-identity = "0.3"
actix-rt = "1.1"
bytes = "0.6"
juniper = { version = "0.15.3", features = ["scalar-naivetime", "expose-test-schema"] }
log = "0.4"

